Fixed bug where mural overlaps with parent sibling and made first example page

--- a/examples/custom_order/mural.css
+++ b/examples/custom_order/mural.css
@@ -13,6 +13,7 @@ html, body {
   position: relative;
   width: 100%;
   margin: 0 auto;
+  top: 50px;
 }
 
 .mural-item {
